// file: pkg/queue/proto/retry_policy.proto
// version: 1.1.0
// guid: 4b5c6d7e-8f9a-0b1c-2d3e-4f5a6b7c8d9e

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "pkg/queue/proto/retry_delay_strategy.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

/**
 * Retry policy for failed message processing.
 * Defines how failed messages should be retried before being
 * sent to dead letter queue.
 */
message RetryPolicy {
  // Maximum number of retry attempts
  int32 max_attempts = 1;

  // Initial delay before first retry
  google.protobuf.Duration initial_delay = 2;

  // Maximum delay between retries
  google.protobuf.Duration max_delay = 3;

  // Backoff multiplier for exponential backoff
  double backoff_multiplier = 4;

  // Retry delay strategy
  RetryDelayStrategy delay_strategy = 5;

  // Whether to enable jitter in retry delays
  bool enable_jitter = 6;

  // Jitter factor (0.0 to 1.0) for randomizing delays
  double jitter_factor = 7;
}
